--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1.0",
+        "devorto/key-value-storage": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
