--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "^7.1.0",
+        "php": "^7.1.0||^8.0.0",
         "devorto/key-value-storage": "^1.0.0"
     },
     "autoload": {
